src/objects/hed__Education_History__c.object
<CustomObject>
    <fields>
        <fullName>End_Reason__c</fullName>
        <description>The reason the student left this Educational Institution.</description>
        <inlineHelpText>The reason the student left this Educational Institution.</inlineHelpText>
        <label>End Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Dropout</fullName>
                </value>
                <value>
                    <fullName>Enrolled in a High School Diploma Program</fullName>
                </value>
                <value>
                    <fullName>Expelled</fullName>
                </value>
                <value>
                    <fullName>Graduated</fullName>
                </value>
                <value>
                    <fullName>Invalid Enrollment</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Reached Maximum Age</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Enrollment_Status__c</fullName>
        <description>The status of this student&apos;s enrolllment in this Educational Institution.</description>
        <inlineHelpText>The status of this student&apos;s enrolllment in this Educational Institution.</inlineHelpText>
        <label>School Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Registered</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Reason__c</fullName>
        <description>The reason the student started at this Educational Institution.</description>
        <inlineHelpText>The reason the student started at this Educational Institution.</inlineHelpText>
        <label>Start Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New to Education System</fullName>
                </value>
                <value>
                    <fullName>Next Year School</fullName>
                </value>
                <value>
                    <fullName>Re-Entry</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>